kodata/yaml/higress/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: higress
spec:
    controllerName: higress.io/gateway-controller
    description: The default Higress GatewayClass
