kodata/yaml/higress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: gateway
    namespace: higress-system
spec:
    gatewayClassName: higress
    listeners:
        -
            allowedRoutes:
                kinds:
                    -
                        group: gateway.networking.k8s.io
                        kind: HTTPRoute
                namespaces:
                    from: All
            name: http
            port: 80
            protocol: HTTP
        -
            allowedRoutes:
                kinds:
                    -
                        group: gateway.networking.k8s.io
                        kind: TLSRoute
                namespaces:
                    from: All
            name: tls
            port: 443
            protocol: TLS
            tls:
                mode: Passthrough
